# typed-key

./: .gitignore  .vscodeignore  2  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.zig  eslint.config.mjs  package.json  pnpm-lock.yaml  release-please-config.json  test.ts  tsup.config.ts
.github/workflows/: ci.yml  publish.yml  release.yml
__tests__/assets/locale/my-app/: messages_en.json  messages_fr.json
crates/typed-key-lsp/: Cargo.toml
crates/typed-key-lsp/src/: generate.rs  lex.rs  lib.rs  main.rs  parse.rs
crates/typed-key-lsp/src/lsp/: action.rs  ast.rs  backend.rs  completion.rs  config.rs  diagnostics.rs  docs.rs  fs.rs  hover.rs  mod.rs  position.rs  queries.rs  t_pox.rs  t_pox_complete.rs  typedkey_lsp.rs  utils.rs  visitor.rs
crates/typed-key-lsp/src/lsp/channels/: diagnostics.rs  lsp.rs  mod.rs
fixture/: index.tsx
src/: extension.ts  main.zig
src/fixture/src/: index.ts
src/fixture/src/assets/locales/: messages_en.json  messages_fr.json
