[package]
name = "typed-key"
version = "0.0.17"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[profile.release.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.30"
miette = { version = "7.2.0" }
ropey = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = [ "rt-multi-thread",
    "io-util",
    "io-std",
    "fs",
    "time",
    "sync",
    "macros"] }
tower-lsp =  { version = "0.20.0", features = ["proposed"] } 
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tree-sitter = "0.23.0"
tree-sitter-typescript = "0.21.2"
walkdir = "2.5.0"
